Updated to "Merged PR 11318"

--- a/examples/DECI/DECI demo.ipynb
+++ b/examples/DECI/DECI demo.ipynb
@@ -14,9 +14,7 @@
     " - We showcase DECI on a larger graph example\n",
     " \n",
     "### Dataset availability\n",
-    "To use the notebook, the CSuite datasets need to be available. Ensure that you have run the CSuite data generation script in `causica/data_generation/csuite/simulate.py` before attempting to load datasets.\n",
-    "\n",
-    "For Microsoft internal users, the datasets will be automatically downloaded from storage."
+    "To use the notebook, the CSuite datasets need to be available and be downloaded in `../../data/`. More information on the datasets and how they can be downloaded can be found here: https://github.com/microsoft/csuite"
    ]
   },
   {
@@ -28,7 +26,7 @@
    "source": [
     "import os\n",
     "# Use this to set the notebook's working directory to the top-level directory, where ./data is located\n",
-    "os.chdir(\"../../..\")"
+    "os.chdir(\"../..\")"
    ]
   },
   {
@@ -38,8 +36,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from open_source.causica.experiment.steps.step_func import load_data\n",
-    "from open_source.causica.models.deci.deci import DECI\n",
+    "from causica.experiment.steps.step_func import load_data\n",
+    "from causica.models.deci.deci import DECI\n",
     "import seaborn as sns\n",
     "import pandas as pd\n",
     "import networkx as nx\n",
@@ -104,12 +102,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "try:\n",
-    "    from evaluation_pipeline.aml_run_context import setup_run_context_in_aml\n",
-    "    run_context = setup_run_context_in_aml()\n",
-    "except ImportError:\n",
-    "    from causica.experiment.run_context import RunContext\n",
-    "    run_context = RunContext()"
+    "from causica.experiment.run_context import RunContext\n",
+    "run_context = RunContext()"
    ]
   },
   {
@@ -198,7 +192,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.run_train(dataset, run_context.metrics_logger, training_params)"
+    "model.run_train(dataset, training_params)"
    ]
   },
   {
@@ -395,7 +389,7 @@
     "training_params['max_auglag_inner_epochs'] = 2000\n",
     "training_params['max_steps_auglag'] = 10\n",
     "\n",
-    "simpson_model.run_train(simpson_data, run_context.metrics_logger, training_params)"
+    "simpson_model.run_train(simpson_data, training_params)"
    ]
   },
   {
@@ -514,7 +508,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "simpson_model.run_train(simpson_data, run_context.metrics_logger, training_params)"
+    "simpson_model.run_train(simpson_data, training_params)"
    ]
   },
   {
@@ -548,7 +542,7 @@
     ")\n",
     "simpson_model = DECI(\"mymodel\", simpson_data.variables, \"mysavedir\", device, **model_config)\n",
     "simpson_model.set_graph_constraint(constraint)\n",
-    "simpson_model.run_train(simpson_data, run_context.metrics_logger, training_params)"
+    "simpson_model.run_train(simpson_data, training_params)"
    ]
   },
   {
@@ -583,7 +577,7 @@
     ")\n",
     "simpson_model = DECI(\"mymodel\", simpson_data.variables, \"mysavedir\", device, **model_config)\n",
     "simpson_model.set_graph_constraint(constraint)\n",
-    "simpson_model.run_train(simpson_data, run_context.metrics_logger, training_params)"
+    "simpson_model.run_train(simpson_data, training_params)"
    ]
   },
   {
@@ -615,7 +609,7 @@
     "constraint[0, 2] = 1.0\n",
     "simpson_model = DECI(\"mymodel\", simpson_data.variables, \"mysavedir\", device, **model_config)\n",
     "simpson_model.set_graph_constraint(constraint)\n",
-    "simpson_model.run_train(simpson_data, run_context.metrics_logger, training_params)"
+    "simpson_model.run_train(simpson_data, training_params)"
    ]
   },
   {
@@ -716,7 +710,7 @@
    "source": [
     "training_params['max_steps_auglag'] = 15\n",
     "training_params['max_auglag_inner_epochs'] = 3000\n",
-    "large_model.run_train(large_data, run_context.metrics_logger, training_params)"
+    "large_model.run_train(large_data, training_params)"
    ]
   },
   {
@@ -997,7 +991,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
