--- a/examples/multi_investment_sales_attribution.ipynb
+++ b/examples/multi_investment_sales_attribution.ipynb
@@ -627,7 +627,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a99ea13a85d64f278cb4be91b21c99d4",
+       "model_id": "3cb2c2e020e2499dbbbc14ecab5b28d6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -690,12 +690,9 @@
    "outputs": [],
    "source": [
     "sem_module: SEMDistributionModule = torch.load(\"deci.pt\")\n",
+    "\n",
     "# create a structural equation model using the most likely graph\n",
-    "sem = DistributionParametersSEM(\n",
-    "    graph=sem_module.adjacency_module().mode,\n",
-    "    func=sem_module.functional_relationships,\n",
-    "    noise_dist=sem_module.noise_module,\n",
-    ")"
+    "sem = sem_module().mode"
    ]
   },
   {
@@ -715,7 +712,7 @@
     }
    ],
    "source": [
-    "graph = nx.from_numpy_matrix(sem.graph.cpu().numpy(), create_using=nx.DiGraph)\n",
+    "graph = nx.from_numpy_array(sem.graph.cpu().numpy(), create_using=nx.DiGraph)\n",
     "graph = nx.relabel_nodes(graph, dict(enumerate(data_module.dataset_train.keys())))\n",
     "\n",
     "fig, axis = plt.subplots(1, 1, figsize=(8, 8))\n",
@@ -896,6 +893,13 @@
     "    ax.set_xlabel(\"Estimated ITE ($)\")\n",
     "    ax.set_ylabel(\"Ground Truth ITE ($)\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
