--- a/examples/csuite_example.ipynb
+++ b/examples/csuite_example.ipynb
@@ -25,7 +25,7 @@
     "from tensordict import TensorDict\n",
     "from torch.utils.data import DataLoader\n",
     "\n",
-    "from causica.datasets.causica_dataset_format import DataEnum, load_data\n",
+    "from causica.datasets.causica_dataset_format import CAUSICA_DATASETS_PATH, DataEnum, load_data\n",
     "from causica.datasets.tensordict_utils import tensordict_shapes\n",
     "from causica.distributions import (\n",
     "    AdjacencyDistribution,\n",
@@ -39,9 +39,7 @@
     "from causica.functional_relationships import ICGNN\n",
     "from causica.graph.dag_constraint import calculate_dagness\n",
     "from causica.sem.sem_distribution import SEMDistributionModule\n",
-    "from causica.training.auglag import AugLagLossCalculator, AugLagLR, AugLagLRConfig\n",
-    "\n",
-    "DATASET_PATH = \"https://azuastoragepublic.blob.core.windows.net/datasets\""
+    "from causica.training.auglag import AugLagLossCalculator, AugLagLR, AugLagLRConfig"
    ]
   },
   {
@@ -105,7 +103,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "root_path = os.path.join(DATASET_PATH, dataset)\n",
+    "root_path = os.path.join(CAUSICA_DATASETS_PATH, dataset)\n",
     "variables_metadata = load_data(root_path, DataEnum.VARIABLES_JSON)\n",
     "dataset_train: TensorDict = load_data(root_path, DataEnum.TRAIN, variables_metadata)\n",
     "# move the entire dataset to the device, since it is small\n",
@@ -195,7 +193,7 @@
    "source": [
     "variable_shapes = tensordict_shapes(dataset_train)\n",
     "\n",
-    "types_dict = {var[\"group_name\"]: var[\"type\"] for var in variables_metadata[\"variables\"]}\n",
+    "types_dict = {var.group_name: var.type for var in variables_metadata.variables}\n",
     "\n",
     "noise_submodules = create_noise_modules(variable_shapes, types_dict, training_config.noise_dist)\n",
     "noise_module = JointNoiseModule(noise_submodules)"
