--- a/examples/csuite_example.ipynb
+++ b/examples/csuite_example.ipynb
@@ -36,7 +36,7 @@
     "    JointNoiseModule,\n",
     "    create_noise_modules,\n",
     ")\n",
-    "from causica.functional_relationships import ICGNN\n",
+    "from causica.functional_relationships import DECIEmbedFunctionalRelationships\n",
     "from causica.graph.dag_constraint import calculate_dagness\n",
     "from causica.sem.sem_distribution import SEMDistributionModule\n",
     "from causica.training.auglag import AugLagLossCalculator, AugLagLR, AugLagLRConfig"
@@ -168,12 +168,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "icgnn = ICGNN(\n",
+    "functional_relationships = DECIEmbedFunctionalRelationships(\n",
     "    shapes=tensordict_shapes(dataset_train),\n",
     "    embedding_size=32,\n",
     "    out_dim_g=32,\n",
-    "    norm_layer=torch.nn.LayerNorm,\n",
-    "    res_connection=True,\n",
+    "    num_layers_g=2,\n",
+    "    num_layers_zeta=2,\n",
     ")"
    ]
   },
@@ -213,7 +213,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sem_module: SEMDistributionModule = SEMDistributionModule(adjacency_dist, icgnn, noise_module)\n",
+    "sem_module: SEMDistributionModule = SEMDistributionModule(adjacency_dist, functional_relationships, noise_module)\n",
     "\n",
     "sem_module.to(device);"
    ]
@@ -233,7 +233,7 @@
    "outputs": [],
    "source": [
     "modules = {\n",
-    "    \"icgnn\": sem_module.functional_relationships,\n",
+    "    \"functional_relationships\": sem_module.functional_relationships,\n",
     "    \"vardist\": sem_module.adjacency_module,\n",
     "    \"noise_dist\": sem_module.noise_module,\n",
     "}\n",
